--- a/server/package.json
+++ b/server/package.json
@@ -7,16 +7,24 @@
   "scripts": {
     "dev": "node --watch src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc"
+    "build": "tsc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "cors": "^2.8.5"
+    "glob": "^13.0.0",
+    "lru-cache": "^11.2.4",
+    "socket.io": "^4.7.2"
   },
   "devDependencies": {
-    "@types/node": "^20.10.6",
     "@types/express": "^4.17.21",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^20.10.6",
+    "jest": "^30.2.0",
+    "ts-jest": "^29.4.6",
     "typescript": "^5.3.3"
   }
 }
