--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,11 @@
     "dev": "node --watch src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "test": "jest",
+    "test": "jest src/__tests__/utils.test.ts",
     "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage"
+    "test:coverage": "jest --coverage",
+    "test:integration": "jest src/__tests__/integration.test.ts",
+    "test:all": "jest"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -23,7 +25,9 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^30.0.0",
     "@types/node": "^20.10.6",
+    "@types/socket.io-client": "^1.4.36",
     "jest": "^30.2.0",
+    "socket.io-client": "^4.8.1",
     "ts-jest": "^29.4.6",
     "typescript": "^5.3.3"
   }
