--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
     "dev": "node --watch src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
-    "test": "jest src/__tests__/utils.test.ts",
+    "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
     "test:integration": "jest src/__tests__/integration.test.ts",
